# notebooklm-pdf-by-chapters

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: codemap.md  guide-generate-overviews.md  guide-split-ebook.md  guide-study-workflow.md  guide-upload-notebooklm.md  index.html  troubleshooting.md  use-cases.md
docs/artefacts/: index.html
docs/brainstorms/: 2026-03-10-chunked-audio-video-generation-brainstorm.md  2026-03-12-from-obsidian-command-brainstorm.md
docs/plans/: 2026-03-08-refactor-comprehensive-code-review-fixes-plan.md  2026-03-10-feat-chunked-audio-video-generation-plan.md  2026-03-10-feat-generate-all-and-download-plan.md  2026-03-13-feat-study-review-interfaces-plan.md
src/pdf_by_chapters/: __init__.py  cli.py  markdown_converter.py  models.py  notebooklm.py  review.py  splitter.py  syllabus.py
tests/: conftest.py
tests/integration/: test_split_roundtrip.py
tests/unit/: test_cli.py  test_notebooklm.py  test_splitter.py  test_syllabus.py
